--- a/src/main/resources/templates/users/info.html
+++ b/src/main/resources/templates/users/info.html
@@ -42,7 +42,7 @@
                         <tbody>
                             <tr th:each="user : ${userPage}">
                                 <td th:text="${user.id}"/>
-                                <td th:text="${user.userName}"/>
+                                <td><a th:href="@{https://t.me/{username}(username=${user.userName})}" th:text="${user.userName}"/></td>
                                 <td th:text="${user.firstName}"/>
                                 <td th:text="${user.lastName}"/>
                                 <td th:text="${user.membershipDate}"/>
